--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ section{
     height: 600px;
     background-size: cover;
     background-position: center;
+    position: relative;
 }
 
 /* Styling the Form */
@@ -67,7 +68,37 @@ section{
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
 }
+.hero-form h3{
+    margin: 0px;
+    font-size: 24px;
+}
+.hero-form p{
+margin: 5px 0 15px 0;
+}
+.form-input{
+display: block;
+width: 100%;
+border: 1px solid #024e76;
+padding: 7px 15px;
+margin-bottom: 15px;
+font-size: 16px;
+}
+.hero-form label{
+    margin: 0 5px
+}
+
+.hero-form button{
+    color: #fce138;
+    background-color: #024e76;
+    border:none;
+    padding: 10px 20px;
+    font-size: 16px;
+}
+
 /* Applying CSS to Footer */
 footer{
     background: #fce138;
