--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@ header{
     background-color: #39a6b2;
     line-height: 1.5;
 }
-
 header h1{
     font-weight: bold;
     font-size: 36px;
@@ -31,16 +30,13 @@ header a{
     color: #fce138;
     text-decoration: none;
 }
-
 header nav{
     float: right;
     margin: 7px 0;
 }
-
 header nav ul li{
     display: inline;
 }
-
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
@@ -103,7 +99,6 @@ font-size: 16px;
 .intro{
 text-align: center;
 }
-
 .section-title{
     font-size: 55px;
     color: #024e76;
@@ -118,7 +113,6 @@ text-align: center;
 .secondary-border{
     border-color: #39a6b2;
 }
-
 .intro p{
     margin: 0 auto;
     line-height: 1.7;
@@ -177,29 +171,47 @@ margin: 10px 0;
     font-size: 32px;
     margin-bottom: 8px;
   }
-  
   .trainer-bio h4 {
     font-weight: lighter;
     font-size: 26px;
     margin-bottom: 25px;
   }
-  
   .trainer-bio p {
     font-size: 17px;
     line-height: 1.3;
   }
-
   .text-left {
     text-align: left;
   }
-  
   .text-right {
     text-align: right;
   }
-
   .trainer-2 img{
       float: right;
   }
+
+/* Applying CSS to the Reach Out section 
+*/
+.contact-info{
+    text-align: center;
+    background-color: #024e76;
+}
+.contact-info h2{
+    color: #fce138;
+}
+.contact-info iframe{
+    width: 400px;
+    height: 400px;
+}
+.contact-info div{
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
+
 
 /* Applying CSS to Footer */
 footer{
@@ -207,20 +219,17 @@ footer{
     width: 100%;
     padding: 40px 35px;
 }
-
 footer h2{
     display:inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
-
 footer div {
     float: right;
     line-height: 1.5;
     text-align: right;
   }
-
   footer a {
     color: #024e76;
   }
