--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,24 +192,35 @@ margin: 10px 0;
 
 /* Applying CSS to the Reach Out section 
 */
-.contact-info{
+.contact{
     text-align: center;
     background-color: #024e76;
 }
-.contact-info h2{
+.contact h2{
     color: #fce138;
 }
 .contact-info iframe{
     width: 400px;
     height: 400px;
 }
-.contact-info div{
+.contact-info{
     width: 410px;
     display: inline-block;
     vertical-align: top;
     text-align: left;
     margin: 30px 0 0 60px;
     color: white;
+}
+.contact-info h3{
+    margin-top: 50px;
+    color: #fce138;
+    font-size: 32px;
+}
+.contact-info p, .contact-info address{
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
 }
 
 
