--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,13 +15,16 @@ body{
 header{
     background-color: #39a6b2;
     line-height: 1.5;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 header h1{
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 20px;
-    display: inline;
+    /* display: inline; */
     
 }
 
@@ -31,7 +34,7 @@ header a{
     text-decoration: none;
 }
 header nav{
-    float: right;
+    /* float: right; */
     margin: 7px 0;
 }
 header nav ul li{
