--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,10 +59,23 @@ section{
 /* Styling the Hero */
 .hero{
     background-image: url(../images/hero-bg.jpg);
-    height: 600px;
+    /* height: 600px; */
     background-size: cover;
     background-position: center;
-    position: relative;
+    /* position: relative; */
+    /* adding flexbox properties */
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.hero-cta{
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
 }
 
 /* Styling the Form */
@@ -70,13 +83,14 @@ section{
     background-color: #fce138;
     color: #024e76;
     padding: 20px;
-    width: 500px;
+    width: 40%;
     border-style: solid;
     border-width: 3px;
     border-color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
+    margin: 3.5%;
+    /* position: absolute; */
+    /* bottom: 120px; */
+    /* right: 140px; */
 }
 .hero-form h3{
     margin: 0px;
