--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,19 +117,38 @@ font-size: 16px;
     padding: 10px 20px;
     font-size: 16px;
 }
+.hero-cta{
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+  }
 /* End of Hero Styling */
 
 /* Css to What We Do Section */
-.intro{
+/* .intro{
 text-align: center;
-}
+} */
 .section-title{
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
+    /* margin-bottom: 35px; */
+    /* padding: 0 100px 20px 100px; */
     border-bottom: 3px solid;
-    display: inline-block;
+    /* display: inline-block; */
+
+    /* adding flexbox CSS */
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border{
     border-color: #fce138;
@@ -143,11 +162,12 @@ text-align: center;
     color:#39a6b2;
     width: 80%;
     font-size: 20px;
+    text-align: center;
 }
 
 /* Apply CSS to What you do section */
 .steps{
-    text-align: center;
+    /* text-align: center; */
     background-color: #fce138;
 }
 .steps div{
@@ -171,7 +191,7 @@ margin: 10px 0;
 
 /* Applying CSS to Meet the Trainers */
 .trainers{
-    text-align: center;
+    /* text-align: center; */
 }
 .trainer{
     text-align: center;
@@ -217,7 +237,7 @@ margin: 10px 0;
 /* Applying CSS to the Reach Out section 
 */
 .contact{
-    text-align: center;
+    /* text-align: center; */
     background-color: #024e76;
 }
 .contact h2{
@@ -269,4 +289,8 @@ footer div {
   }
   footer a {
     color: #024e76;
+  }
+
+.flex-row{
+    display: flex;
   }
