--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,13 +170,13 @@ text-align: center;
     /* text-align: center; */
     background-color: #fce138;
 }
-.steps div{
+/* .steps div{
     margin-bottom: 80px;
 }
 .steps img{
 width: 15%;
 margin: 10px 0;
-}
+} */
 .steps div h3{
     color: #024e76;
     font-size: 46px;
@@ -185,8 +185,42 @@ margin: 10px 0;
 .steps div p{
     font-size: 23px;
 }
-.steps span{
+/* .steps span{
     font-size: 38px;
+} */
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+  }
+.step{
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.step h3{
+    flex: 1 30%;
+}
+.step-info{
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.step-img{
+    flex: 1 12%;
+    margin-right: 20px;
+}
+.step-text{
+    flex: 12;
+}
+.step-img img{
+    max-width: 100%;
 }
 
 /* Applying CSS to Meet the Trainers */
