--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,37 +226,43 @@ margin: 10px 0;
 /* Applying CSS to Meet the Trainers */
 .trainers{
     /* text-align: center; */
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
+
 .trainer{
-    text-align: center;
-    width: 900px;
-    margin: 0 auto 30px auto;
+    text-align: left;
+  flex: 1;
+    margin: 20px;
     background: #024e76;
     color: #fce138;
-    overflow: auto;
 }
 .trainer img{
-    width: 35%;
-    float: left;
+    width: 100%;
+    /* float: left; */
 }
 
 .trainer-bio{
-    padding: 35px;
-    float: left;
-    width: 65%;
+    padding: 25px;
+    /* float: left; */
+    /* width: 65%; */
+    line-height: 1.3;
 }
 .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 28px;
+    /* margin-bottom: 8px; */
   }
   .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
   }
   .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
+   
   }
   .text-left {
     text-align: left;
