--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ header nav ul li{
     display: inline;
 }
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -67,6 +67,7 @@ section{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta{
@@ -75,7 +76,7 @@ section{
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 /* Styling the Form */
@@ -137,7 +138,7 @@ font-size: 16px;
 text-align: center;
 } */
 .section-title{
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     /* margin-bottom: 35px; */
     /* padding: 0 100px 20px 100px; */
@@ -360,4 +361,22 @@ footer div {
 
 .flex-row{
     display: flex;
+  }
+
+
+
+
+  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+   
+  }
+  
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
+    
+  }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
+   
   }
