--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,12 +18,26 @@ header{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: sticky;
+    top: 0;
+
+    background-image: url(../images/hero-bg.jpg);
+    background-size: cover;
+       background-position: center;
+       background-attachment: fixed;
+background-position: 80%;
+    
+    /* Vendor Prefix for Safari */
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 header h1{
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 20px;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     /* display: inline; */
     
 }
@@ -51,7 +65,14 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
 section{
     padding:60px;
 }
@@ -68,6 +89,8 @@ section{
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+background-position: 80%;
 }
 
 .hero-cta{
@@ -78,10 +101,14 @@ section{
     font-size: 18px;
     line-height: 1.2;
 }
+.hero-cta h2{
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
 
 /* Styling the Form */
 .hero-form{
-    background-color: #fce138;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    background-color: #fce238c0;
     color: #024e76;
     padding: 20px;
     width: 40%;
@@ -89,6 +116,7 @@ section{
     border-width: 3px;
     border-color: #024e76;
     margin: 3.5%;
+    border-radius: 15px;
     /* position: absolute; */
     /* bottom: 120px; */
     /* right: 140px; */
@@ -107,7 +135,13 @@ border: 1px solid #024e76;
 padding: 7px 15px;
 margin-bottom: 15px;
 font-size: 16px;
+border-radius: 15px;
+background-color: rgba(255,255,255, 0.75);
 }
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
 .hero-form label{
     margin: 0 5px
 }
@@ -117,7 +151,11 @@ font-size: 16px;
     border:none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 15px;
 }
+.hero-form button:hover {
+    background-color: #39a6b2;  
+  }
 .hero-cta{
     width: 35%;
     text-align: right;
@@ -198,11 +236,14 @@ margin: 10px 0;
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
+  
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+}
+.step:last-child{
+    border-bottom: 1px solid #39a6b2;
 }
 .step h3{
     flex: 1 30%;
@@ -324,6 +365,10 @@ margin: 10px 0;
     margin-bottom: 15px;
     margin-top: 5px;
 }
+.contact-forminput:focus, .contact-form textarea:focus{
+    background-color: rgba(255,255,255, 1);
+  outline: none;
+}
 .contact-form button{
     width: 100%;
     border: none;
@@ -333,6 +378,10 @@ margin: 10px 0;
     padding: 15px 0;
     font-size: 16px;
 }
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+  }
 
 
 /* Applying CSS to Footer */
@@ -361,14 +410,12 @@ footer div {
 
 .flex-row{
     display: flex;
-  }
-
-
-
+ }
 
   /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
    header{
+    position: relative
        padding-bottom: 0;
        justify-content: center;
    }
@@ -384,6 +431,7 @@ footer div {
    header nav ul li a {
        font-size: 20px;
    }
+  
    footer h2, footer div{
        text-align: center;
        width: 100%;
